tests/fail/10-partial-without-default.rs
use sealed::sealed;

#[sealed(partial)]
pub trait A {
	#[seal]
	fn sealed();
}

fn main() {}
