tests/fail/10-partial-without-default.stderr
error: This function is sealed from implementation, but it does not have a default implementation. This effectively seals the entire trait, which would be clearer to do by not having the trait seal be partial.
 --> tests/fail/10-partial-without-default.rs:6:5
  |
6 |     fn sealed();
  |        ^^^^^^
